--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation files('libs/mysql-connector-java-3.0.17-ga-bin.jar')
-
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
